--- a/site/index.cshtml
+++ b/site/index.cshtml
@@ -1,8 +1,9 @@
 @{
-var txt = DateTime.Now; // любой код на C#
+var txt = DateTime.Now; // Г«ГѕГЎГ®Г© ГЄГ®Г¤ Г­Г  C#
 }
 <html>
 	<body>
+		<p>NOT WELCOME</p>
 		<p>The dateTime is @txt</p>
 	</body>
 </html>
