--- a/index.cshtml
+++ b/index.cshtml
@@ -3,7 +3,7 @@ var txt = DateTime.Now; // ëþáîé êîä íà C#
 }
 <html>
 	<body>
-		<p>NOT WELCOME</p>
-		<p>The dateTime is @txt</p>
+		<p>What a Wonderful WebSite!</p>
+		<p>The content of the wonderful Website is loaded in Github and deployed continuously to an Azure WebApp.</p>
 	</body>
 </html>
